<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.LoginActivity"
    android:background="@color/black"
    android:orientation="vertical"
    >

        <ImageView
            android:contentDescription="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/bg_welcome" />

        <LinearLayout
            android:id="@+id/llContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/bg_container_dark_gray"
            android:orientation="vertical"
            android:paddingTop="20dp"
            >

            <ImageView
                android:contentDescription="@string/app_name"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/logo"
                app:tint="@color/green"
                android:layout_marginBottom="@dimen/dimen_6"
                />

            <TextView
                android:id="@+id/tvTagLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_4"
                android:text="@string/text_tagline"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_text_xxxxlarge"
                android:textAlignment="center"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_login"
                style="@style/Button.Green"
                android:layout_marginTop="@dimen/dimen_20"
                android:layout_marginBottom="@dimen/dimen_6"
                android:layout_marginHorizontal="@dimen/dimen_6"
                />

            <Button
                android:id="@+id/btnAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_about"
                style="@style/Button.Transparent"
                android:layout_marginBottom="@dimen/dimen_14"
                android:layout_marginHorizontal="@dimen/dimen_6"
                />

        </LinearLayout>

</FrameLayout>